updated tutorial with comiso instructions
Former-commit-id: 50fe9fa405839917423d58db658cfe331b8384cc

--- a/index.html
+++ b/index.html
@@ -171,6 +171,11 @@ subrepos:</p>
 git submodule update -- recursive
 </code></pre>
 
+<h2 id="unittesting">Unit testing</h2>
+
+<p>Libigl maintains <a href="https://github.com/libigl/libigl-unit-tests">separate
+repository</a> for unit testing.</p>
+
 <h2 id="howtocontribute">How to contribute</h2>
 
 <p>If you are interested in joining development, please fork the repository and
@@ -245,7 +250,7 @@ page</a>.</p>
 
 <p>2015 Alec Jacobson, Daniele Panozzo, Christian Schüller, Olga Diamanti, Qingnan
 Zhou, Nico Pietroni, Stefan Brugger, Kenshi Takayama, Wenzel Jakob, Nikolas De
-Giorgis, Luigi Rocca, Leonardo Sacht, Olga Sorkine-Hornung, and others.</p>
+Giorgis, Luigi Rocca, Leonardo Sacht, Kevin Walliman, Olga Sorkine-Hornung, and others.</p>
 
 <p>Please see individual files for appropriate copyright notices.</p>
 
