--- a/style-guidelines.html
+++ b/style-guidelines.html
@@ -1,38 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8"/>
-	<title>libigl</title>
-	<meta name="author" content="Alec Jacobson and Daniele Panozzo and others"/>
-	<link type="text/css" rel="stylesheet" href="tutorial/style.css"/>
-<script type='text/javascript' src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
-<link rel='stylesheet' href='http://yandex.st/highlightjs/7.3/styles/default.min.css'>
-<script src='http://yandex.st/highlightjs/7.3/highlight.min.js'></script>
-<script>hljs.initHighlightingOnLoad();</script>
-</head>
-<body>
-
 <h1 id="libiglstyleguidelines">Libigl Style Guidelines</h1>
 
-<p>This library is shared by many people. This document highlights some style
-guidelines for <em>developers</em> of the library, but also act as best-practices for
-users.</p>
-
-<blockquote>
-<p>This is still a work in progress and will likely grow in the near future.</p>
-</blockquote>
+<p>Libigl is used and developed by many people. This document highlights some
+style guidelines for <em>developers</em> of the library, but also acts as
+best-practices for users.</p>
 
 <h2 id="filefunction">One function, one .h/.cpp pair</h2>
 
 <p>The structure of libigl is very flat and function-based. For every
-function/sub-routine create a single .h and .cpp file. For example, if you have
+function/sub-routine, create a single .h and .cpp file. For example, if you have
 a function that determines connected components from a face list <code>F</code> you would
 create the header <code>connected_components.h</code> and <code>connected_components.cpp</code> and the only
 function defined should be <code>void connected_components(const ... F, ... C)</code>. If the
 implementation of <code>connected_components</code> requires a subroutine to compute an
 adjacency matrix then <em>create another pair</em> <code>adjacency_matrix.h</code> and
-<code>adjacency_matrix.cpp</code> with a single function <code>void adjacency_matrix(const ... F, ...
-A)</code>.</p>
+<code>adjacency_matrix.cpp</code> with a single function <code>void adjacency_matrix(const ... F, ... A)</code>.</p>
 
 <h3 id="example">Example</h3>
 
@@ -111,7 +92,10 @@ new pair of .h/.cpp files with this sub-function.</p>
 
 <p>If encapsulation in a separate file is not possible or does not make sense,
 then avoid crowding the namespace by creating lambda functions within the
-function implmentation.</p>
+function implementation.</p>
+
+<p>These lambda functions must still be documented with clear <a href="#header-documentation">input and output
+arguments</a>.</p>
 
 <h3 id="avoidhelperclasses">Avoid &#8220;helper&#8221; classes</h3>
 
@@ -129,16 +113,16 @@ header file. A typical documentation consists of four parts:</p>
 <pre><code class="cpp">// [A human readable description of what the function does.]
 //
 // Inputs:
-//   [variable name of first (const) input]   [dimensions and
-//     description of this input variable]
-//   [variable name of second (const) input]   [dimensions and
-//     description of this input variable]
+//   [variable name of first (const) input]   [dimensions and description of
+//     this input variable]
+//   [variable name of second (const) input]   [dimensions and description of
+//     this input variable]
 //   ...
 // Outputs:
-//   [variable name of first output ]   [dimensions and
-//     description of this output variable]
-//   [variable name of second output ]   [dimensions and
-//     description of this output variable]
+//   [variable name of first output ]   [dimensions and description of this
+//     output variable]
+//   [variable name of second output ]   [dimensions and description of this
+//     output variable]
 //   ...
 // Returns [description of return value]
 </code></pre>
@@ -150,10 +134,10 @@ header file. A typical documentation consists of four parts:</p>
 <pre><code>// Computes the barycenter of every simplex
 //
 // Inputs:
-//   V  #V x dim matrix of vertex coordinates
-//   F  #F x simplex_size  matrix of indices of simplex corners into V
+//   V  #V by dim matrix of vertex coordinates
+//   F  #F by simplex_size  matrix of indices of simplex corners into V
 // Output:
-//   BC  #F x dim matrix of 3d vertices
+//   BC  #F by dim matrix of 3d vertices
 //
 </code></pre>
 
@@ -309,8 +293,3 @@ edited by you first. This means for
 
 <p>Whenever possible <code>#include</code> directives should be placed in the <code>.cpp</code>
 implementation file rather than the <code>.h</code> header file.</p>
-
-<h2 id="eigentemplates">Eigen templates</h2>
-
-</body>
-</html>
